--- a/Labs Programing/Lab: 03 - Structure web pages with HTML.HTML
+++ b/Labs Programing/Lab: 03 - Structure web pages with HTML.HTML
@@ -69,7 +69,7 @@ Though mansaf is frequently referred to as Jordan's "national dish", Palestinian
 
     </li>
 
-    <li> <a href=" "> abd </a>
+    <li> <a href="https://abdallahabukhurma.github.io/Reading-Notes/"> abd </a>
 
     </li>
 
